<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/very_light_grey">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context="com.sparshik.myappportfolio.MainActivity">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="32dp"
            android:text="@string/header"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <Button
            android:id="@+id/app_one"
            android:layout_width="220dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="16dp"
            android:background="?colorPrimaryDark"
            android:fontFamily="sans-serif"
            android:text="@string/app_one_name"
            android:textColor="@android:color/white" />

        <Button
            android:id="@+id/app_two"
            android:layout_width="220dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="8dp"
            android:background="?colorPrimaryDark"
            android:fontFamily="sans-serif"
            android:text="@string/app_two_name"
            android:textColor="@android:color/white" />

        <Button
            android:id="@+id/app_three"
            android:layout_width="220dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="8dp"
            android:background="?colorPrimaryDark"
            android:fontFamily="sans-serif"
            android:text="@string/app_three_name"
            android:textColor="@android:color/white" />

        <Button
            android:id="@+id/app_four"
            android:layout_width="220dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="8dp"
            android:background="?colorPrimaryDark"
            android:fontFamily="sans-serif"
            android:text="@string/app_four_name"
            android:textColor="@android:color/white" />

        <Button
            android:id="@+id/app_five"
            android:layout_width="220dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="8dp"
            android:background="?colorPrimaryDark"
            android:fontFamily="sans-serif"
            android:text="@string/app_five_name"
            android:textColor="@android:color/white" />

        <Button
            android:id="@+id/app_six"
            android:layout_width="220dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="8dp"
            android:background="?colorPrimaryDark"
            android:fontFamily="sans-serif"
            android:text="@string/app_six_name"
            android:textColor="@android:color/white" />
    </LinearLayout>
</ScrollView>